; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-crypt.c_ltohex.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-crypt.c_ltohex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ltohex.hex = internal global [17 x i8] c"0123456789abcdef\00", align 16
@SMALL_CHUNK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ltohex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ltohex(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i64 @luaL_checklstring(i32* %9, i32 1, i64* %3)
  %11 = inttoptr i64 %10 to i32*
  store i32* %11, i32** %4, align 8
  %12 = load i32, i32* @SMALL_CHUNK, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %5, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %6, align 8
  store i8* %15, i8** %7, align 8
  %16 = load i64, i64* %3, align 8
  %17 = load i32, i32* @SMALL_CHUNK, align 4
  %18 = sdiv i32 %17, 2
  %19 = sext i32 %18 to i64
  %20 = icmp ugt i64 %16, %19
  br i1 %20, label %21, label %26

21:                                               ; preds = %1
  %22 = load i32*, i32** %2, align 8
  %23 = load i64, i64* %3, align 8
  %24 = mul i64 %23, 2
  %25 = call i8* @lua_newuserdata(i32* %22, i64 %24)
  store i8* %25, i8** %7, align 8
  br label %26

26:                                               ; preds = %21, %1
  store i32 0, i32* %8, align 4
  br label %27

27:                                               ; preds = %62, %26
  %28 = load i32, i32* %8, align 4
  %29 = sext i32 %28 to i64
  %30 = load i64, i64* %3, align 8
  %31 = icmp ult i64 %29, %30
  br i1 %31, label %32, label %65

32:                                               ; preds = %27
  %33 = load i32*, i32** %4, align 8
  %34 = load i32, i32* %8, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32, i32* %33, i64 %35
  %37 = load i32, i32* %36, align 4
  %38 = ashr i32 %37, 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds [17 x i8], [17 x i8]* @ltohex.hex, i64 0, i64 %39
  %41 = load i8, i8* %40, align 1
  %42 = load i8*, i8** %7, align 8
  %43 = load i32, i32* %8, align 4
  %44 = mul nsw i32 %43, 2
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i8, i8* %42, i64 %45
  store i8 %41, i8* %46, align 1
  %47 = load i32*, i32** %4, align 8
  %48 = load i32, i32* %8, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %47, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = and i32 %51, 15
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds [17 x i8], [17 x i8]* @ltohex.hex, i64 0, i64 %53
  %55 = load i8, i8* %54, align 1
  %56 = load i8*, i8** %7, align 8
  %57 = load i32, i32* %8, align 4
  %58 = mul nsw i32 %57, 2
  %59 = add nsw i32 %58, 1
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds i8, i8* %56, i64 %60
  store i8 %55, i8* %61, align 1
  br label %62

62:                                               ; preds = %32
  %63 = load i32, i32* %8, align 4
  %64 = add nsw i32 %63, 1
  store i32 %64, i32* %8, align 4
  br label %27

65:                                               ; preds = %27
  %66 = load i32*, i32** %2, align 8
  %67 = load i8*, i8** %7, align 8
  %68 = load i64, i64* %3, align 8
  %69 = mul i64 %68, 2
  %70 = call i32 @lua_pushlstring(i32* %66, i8* %67, i64 %69)
  %71 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %71)
  ret i32 1
}

declare dso_local i64 @luaL_checklstring(i32*, i32, i64*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i8* @lua_newuserdata(i32*, i64) #1

declare dso_local i32 @lua_pushlstring(i32*, i8*, i64) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
